@@ -98,3 +98,7 @@ Assigment operator and all inside comments is ignored.
 When traversing code, `py-partial-expression' climbs down and up
 all levels encountered, i.e. at opening `[' `py-expression' would return ['spam', 'eggs', 100, 1234], while one char behind at `''
 it yields `'spam','
+
+- py-sexp-function, 
+  When set, it's value is called instead of `forward-sexp', `backward-sexp
+  Choices are py-partial-expression, py-expression, default nil
