@@ -4,6 +4,10 @@ Python Mode News
 New in version 6.0.12
 ---------------------
 
+- py-sexp-function, 
+  When set, it's value is called instead of `forward-sexp', `backward-sexp
+  Choices are py-partial-expression, py-expression, default nil
+
 - `py-partial-expression' reconsidered.
    Beside common moves like `defun', `statement' specific Python-mode edits are delivered:
 
@@ -25,6 +29,7 @@ New in version 6.0.12
   When traversing code, `py-partial-expression' climbs down and up
   all levels encountered, i.e. at opening `[' `py-expression' would return ['spam', 'eggs', 100, 1234], while one char behind at `''
   it yields `'spam','
+
 
 New in version 6.0.11
 ---------------------
